
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8 ;


 int licence_key ;
 int licence_sign_key ;
 int memcpy (int ,int *,int) ;
 int sec_hash_16 (int ,int *,int *,int *) ;
 int sec_hash_48 (int *,int *,int *,int *,int) ;

__attribute__((used)) static void
licence_generate_keys(uint8 * client_key, uint8 * server_key, uint8 * client_rsa)
{
 uint8 session_key[48];
 uint8 temp_hash[48];


 sec_hash_48(temp_hash, client_rsa, client_key, server_key, 65);
 sec_hash_48(session_key, temp_hash, server_key, client_key, 65);


 memcpy(licence_sign_key, session_key, 16);


 sec_hash_16(licence_key, &session_key[16], client_key, server_key);
}
