; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_licence_generate_keys.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_licence_generate_keys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@licence_sign_key = common dso_local global i32 0, align 4
@licence_key = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @licence_generate_keys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @licence_generate_keys(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca [48 x i32], align 16
  %8 = alloca [48 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = getelementptr inbounds [48 x i32], [48 x i32]* %8, i64 0, i64 0
  %10 = load i32*, i32** %6, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @sec_hash_48(i32* %9, i32* %10, i32* %11, i32* %12, i32 65)
  %14 = getelementptr inbounds [48 x i32], [48 x i32]* %7, i64 0, i64 0
  %15 = getelementptr inbounds [48 x i32], [48 x i32]* %8, i64 0, i64 0
  %16 = load i32*, i32** %5, align 8
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @sec_hash_48(i32* %14, i32* %15, i32* %16, i32* %17, i32 65)
  %19 = load i32, i32* @licence_sign_key, align 4
  %20 = getelementptr inbounds [48 x i32], [48 x i32]* %7, i64 0, i64 0
  %21 = call i32 @memcpy(i32 %19, i32* %20, i32 16)
  %22 = load i32, i32* @licence_key, align 4
  %23 = getelementptr inbounds [48 x i32], [48 x i32]* %7, i64 0, i64 16
  %24 = load i32*, i32** %4, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @sec_hash_16(i32 %22, i32* %23, i32* %24, i32* %25)
  ret void
}

declare dso_local i32 @sec_hash_48(i32*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @memcpy(i32, i32*, i32) #1

declare dso_local i32 @sec_hash_16(i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
